# recipe-chatbot

./: notes.md  pyproject.toml  query_dimensions.md  user_persona.md
annotation/: analysis.ipynb  analysis_results.csv  analysis_summary.csv  annotation.py  general_coding.json  traces.json
backend/: system_prompt.md  utils.py
data/: sample_queries.csv
hw3/: dietary_queries.csv  hw3.ipynb  labeled_traces.jsonl  test_traces.csv  trace_viewer.html  train_traces.csv
scripts/: gen_traces.py
